todo-haapsalu/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-haapsalu
  namespace: haapsalu
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: todo
          image: ghcr.io/tluhk/todo:latest
          volumeMounts:
            - name: logs
              mountPath: /var/log/todo
          ports:
            - containerPort: 3000
      volumes:
        - name: logs
          emptyDir: {}
