todo-haapsalu/manifests/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: haapsalu
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP # Sisemine ligipääs rakendustele
