todo-haapsalu/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
  namespace: haapsalu
spec:
  selector:
    app: todo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
